# vision-engine

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_frame_grabber_example.py  object_detection_example.py
src/vision_engine/: __init__.py  gui.py  utils.py
src/vision_engine/frame_grabbers/: __init__.py  frame_grabber.py  managed_frame_grabber.py  service.py  single_frame_grabber.py
src/vision_engine/object_detectors/: __init__.py  object_detector.py  service.py  yolo.py
