[project]
name = "vision-engine"
version = "0.1.0"
description = "A computer vision package for frame grabbing, object detection"
authors = [
    {name = "Dennis Lee",email = "wylee2000@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
repository = "https://github.com/dennislwy/vision-engine"
requires-python = ">=3.9,<4.0"
dependencies = [
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "ultralytics (>=8.3.203,<9.0.0)"
]
keywords = ["computer-vision", "object-detection", "frame-grabber", "yolo", "opencv"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "vision_engine", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
